United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7007229 Fix warnings with VS2010 in compressedStream.cpp
7007229 : Fix warnings with VS2010 in compressedStream.cpp

Details
Type:
Bug
Submit Date:
2010-12-16
Status:
Closed
Updated Date:
2011-04-23
Project Name:
JDK
Resolved Date:
2011-04-23
Component:
hotspot
OS:
windows_xp
Sub-Component:
compiler
CPU:
x86
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs20

Related Reports
Backport:
Backport:

Sub Tasks

Description
Compilation of compressedStream.cpp fails on VS2010 with:
c:\temp\jprt\p2\b\022033.iv159533\source\src\share\vm\code\compressedstream.cpp(214) : error C2220: warning treated as error - no 'object' file generated
c:\temp\jprt\p2\b\022033.iv159533\source\src\share\vm\code\compressedstream.cpp(214) : warning C4748: /GS can not protect parameters and local variables from local buffer overrun because optimizations are disabled

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/build/hotspot/rev/5fa559508216
                                     
2010-12-25
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/5fa559508216
                                     
2010-12-16
EVALUATION

Interference between the fix for 6993125 and the disabled optimization code fragment in compressedStream.cpp produce warning with VS2010. The solution is to disable the warning for the code fragment.
                                     
2010-12-16



Hardware and Software, Engineered to Work Together