7007229: Fix warnings with VS2010 in compressedStream.cpp

An interference between a fix for 6993125 and disabled optimization in compressedStream.cpp produces a warning with VS2010. Disable the warning for the code fragment for which the optimizations are disabled.

Reviewed-by: kvn